Update title and heading for partners section

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Магазини Полтавської області</title>
+  <title>Партнери Profcom Card Полтавської області</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
 
-<h1>Магазини Полтавської області</h1>
+<h1>Партнери Profcom Card Полтавської області</h1>
 
 <div id="map"></div>
 
